tests/baselines/reference/symbolProperty34.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty34.ts(7,6): error TS1023: An index signature parameter type must be 'string' or 'number'.


==== tests/cases/conformance/es6/Symbols/symbolProperty34.ts (1 errors) ====
    class C1 extends C2 {
        [Symbol.toStringTag]() {
            return { x: "" };
        }
    }
    class C2 {
        [s: symbol]: () => { x: number };
         ~
!!! error TS1023: An index signature parameter type must be 'string' or 'number'.
    }